Add Embedded YouTube tutorials videos to Video Tutorial Section (#545)
* Add Embedded YouTube tutorials videos to new video section on Tutorials page

* Update tutorial.html

* tutorial.html: Reduce top padding for video tutorials container by using 'common-padding-top'

---------

Co-authored-by: Amanda Perino <58528404+AmandaPerino@users.noreply.github.com>

--- a/_pages/tutorial.html
+++ b/_pages/tutorial.html
@@ -64,6 +64,7 @@ redirect_from:
       </div>
     </div>
   </div>
+
 </div>
 
 <div class="docs cards common-padding--bottom-small">
@@ -140,7 +141,63 @@ redirect_from:
   </div>
 </div>
 
-<div class="docs text common-padding--bottom">
+<!-- video tutorials -->
+<div class="docs text common-padding--top-small">
+  <div class="container">
+    <div class="text__body">
+      <div class="text__content common-content">
+        <h2 class="how">Video Tutorials</h2>
+            <p class="how-leadin">
+              Build a Task Manager app while learning the fundamentals of Rails through clear, 
+              hands-on video tutorials. 
+              <br>
+              Find all videos in the playlists below.
+            </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container common-padding--top-none">
+  <div class="docs card__fullwidth common-padding--top-none">
+    <div class="card__fullwidth common-padding--top-none">
+        <div class="card__headline">
+          <h2 class="thin common-padding--top-none">Rails New for Beginners - 10 videos</h2>
+        </div>
+        <div class="embed-container common-padding--top-none">
+          <iframe
+            src="https://www.youtube.com/embed/videoseries?si=htZMcUYKHkwvtbwF&amp;list=PLHFP2OPUpCeZcPutT9yn4-e0bMmrn5Gd1"
+            title="Beginners Guide to Ruby on Rails"
+            aria-label="Beginner Rails Video Series"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            loading="lazy"
+            allowfullscreen>
+          </iframe>
+        </div>
+    </div>
+    <div class="card__fullwidth common-padding--top-none">
+      <div class="card__headline">
+        <h2 class="thin">Rails 8 Features - 9 videos</h2>
+      </div>
+      <div class="embed-container common-padding--top-none">
+        <iframe
+          src="https://www.youtube.com/embed/videoseries?si=6E_FwCP5YQdt8-MB&amp;list=PLHFP2OPUpCebdA4-xR07SPpoBWVERkHR6"
+          title="Rails 8 Unpacked with Typecraft"
+          aria-label="Advanced Rails Video Series"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          loading="lazy"
+          allowfullscreen>
+        </iframe>
+      </div>
+    </div>
+  
+</div>
+
+<div class="docs text common-padding--bottom common-padding--top-small">
   <div class="container">
     <div class="text__body">
       <div class="text__content common-content">
@@ -157,3 +214,5 @@ redirect_from:
     </div>
   </div>
 </div>
+
+<p class="how-"></p>
