On world index page, allow h2 heading have h3 styles

--- a/world/index.html
+++ b/world/index.html
@@ -1,4 +1,5 @@
 ---
+id: events
 title: "Rails World Conference"
 description: Rails World is an annual two day Rails community conference, featuring technical talks, workshops, and keynotes about best practices in Rails development.
 permalink:
