Fix typo in trademarks.html
include not inlude

--- a/_pages/trademarks.html
+++ b/_pages/trademarks.html
@@ -46,7 +46,7 @@ redirect_from:
         </ul>
 
         <h6>Using Rails in a project name</h6>
-        <p>You may use the word “Rails” as part of the name of your project when this does not directly imply endorsement or association, like having a community site called “The Rails Shack”, but then you have to inlude the following disclaimer at the bottom of your primary homepage for the project:</p>
+        <p>You may use the word “Rails” as part of the name of your project when this does not directly imply endorsement or association, like having a community site called “The Rails Shack”, but then you have to include the following disclaimer at the bottom of your primary homepage for the project:</p>
         <blockquote>The Rails trademarks are the intellectual property of David Heinemeier Hanson, and exclusively licensed to the Rails Foundation. Uses of ‘Rails’ and ‘Ruby on Rails’ in this website are for identification purposes only and do not imply an endorsement by or affiliation with Rails, the trademark owner, or the Rails Foundation.</blockquote>
 
         <h6>Getting permission</h6>
