Last one for the win 🤘

--- a/world/index.html
+++ b/world/index.html
@@ -38,9 +38,9 @@ permalink:
         <h2>Previous editions.</h2>
 
         <ul>
-            <li><a href="/world/2025">2025</a> Amsterdam, NL</li> (<a href="https://www.youtube.com/playlist?list=PLHFP2OPUpCebhAv1ZWb_978cTl1o-yue-">2025 Playlist</a>)
-            <li><a href="/world/2024">2024</a> Toronto, CA</li> (<a href="https://www.youtube.com/playlist?list=PLHFP2OPUpCeb182aDN5cKZTuyjn3Tdbqx">2024 Playlist</a>)
-            <li><a href="/world/2023">2023</a> Amsterdam, NL</li> (<a href="https://www.youtube.com/playlist?list=PLHFP2OPUpCeY9IX3Ht727dwu5ZJ2BBbZP">2023 Playlist</a>)
+            <li><a href="/world/2025">2025</a> Amsterdam, NL (<a href="https://www.youtube.com/playlist?list=PLHFP2OPUpCebhAv1ZWb_978cTl1o-yue-">2025 Playlist</a>)</li>
+            <li><a href="/world/2024">2024</a> Toronto, CA (<a href="https://www.youtube.com/playlist?list=PLHFP2OPUpCeb182aDN5cKZTuyjn3Tdbqx">2024 Playlist</a>)</li>
+            <li><a href="/world/2023">2023</a> Amsterdam, NL (<a href="https://www.youtube.com/playlist?list=PLHFP2OPUpCeY9IX3Ht727dwu5ZJ2BBbZP">2023 Playlist</a>)</li>
         </ul>
 
         <hr class="divider" />
