Fix incorrect `lang` attributes
Several doctrine pages incorrectly used `lang="en"` or omitted the `lang`
attribute for the Russian link. This commit corrects them to `lang="ru"`
for consistency with other languages.

--- a/doctrine/de.html
+++ b/doctrine/de.html
@@ -42,7 +42,7 @@ redirect_from:
               <li lang="es">
                 <a href="/doctrine/fr"><span>Français</span></a>
               </li>
-              <li lang="en">
+              <li lang="ru">
                 <a href="/doctrine/ru"><span>Russian</span></a>
               </li>
               <li lang="zh-CN">
