--- a/doctrine/fr.html
+++ b/doctrine/fr.html
@@ -27,7 +27,7 @@ redirect_from:
               <li lang="en"><a href="/doctrine"><span>English</span></a></li>
               <li lang="de"><a href="/doctrine/de"><span>Deutsch</span></a></li>
               <li lang="es"><a href="/doctrine/es"><span>Español</span></a></li>
-              <li lang="en"><a href="/doctrine/ru"><span>Russian</span></a></li>
+              <li lang="ru"><a href="/doctrine/ru"><span>Russian</span></a></li>
               <li lang="zh-CN"><a href="/doctrine/zh_cn"><span>简体中文</span></a></li>
               <li lang="zh-TW"><a href="/doctrine/zh_tw"><span>繁體中文</span></a></li>
             </ul>
