--- a/doctrine/zh_cn.html
+++ b/doctrine/zh_cn.html
@@ -28,8 +28,8 @@ redirect_from:
               <li lang="de"><a href="/doctrine/de"><span>Deutsch</span></a></li>
               <li lang="es"><a href="/doctrine/es"><span>Español</span></a></li>
               <li lang="fr"><a href="/doctrine/fr"><span>Français</span></a></li>
-              <li><a href="/doctrine/ru"><span>Russian</span></a></li>
-              <li><a href="/doctrine/zh_tw"><span>繁體中文</span></a></li>
+              <li lang="ru"><a href="/doctrine/ru"><span>Russian</span></a></li>
+              <li lang="zh-TW"><a href="/doctrine/zh_tw"><span>繁體中文</span></a></li>
             </ul>
           </div>
         </div>
