--- a/doctrine/ja.html
+++ b/doctrine/ja.html
@@ -150,7 +150,7 @@ Use exit() or Ctrl-D (i.e. EOF) to exit
           <h3>唯一のパラダイムはない</h3>
           <p>中心となるただ一つのアイデアを掲げて、そこから論理的帰結としてアーキテクチャのさまざまな基盤を導き出そうという主張には、強く感情に訴える魅力があります。このような規律には純粋さがあるため、プログラマーがこの眩しい光に自然と惹き寄せられるのは明らかです。</p>
           <p>Railsはそうではありません。Railsは一枚の完全無欠な布地ではなく、さまざまな布地を縫い合わせたキルトです。Railsはさまざまな異なるアイデアやパラダイムの複合体であり、その多くは、一つ一つを単独で見比べると互いに相容れないように見えます。しかし、私たちがRailsでやろうとしているのはそのような対立ではありません。Railsは、勝者がただ一人でなければならないような優秀アイデア選手権の場ではないのです。</p>
-          <p>Rails MVCのうち、ビューを構築しているテンプレートを見てみましょう。これらのテンプレートからコードを抽出したヘルパーは、デフォルトではどれも大鍋に放り込まれた関数にすぎません! 名前空間すら一つにまとめられています。なんと衝撃的で恐ろしいことでしょう、まるで昔ながらのPHPのスープのようです！</p>
+          <p>Rails MVCのうち、ビューを構築しているテンプレートを見てみましょう。これらのテンプレートからコードを抽出したヘルパーは、デフォルトではどれも大鍋に放り込まれた関数にすぎません！ 名前空間すら一つにまとめられています。なんと衝撃的で恐ろしいことでしょう、まるで昔ながらのPHPのスープのようです！</p>
           <p>しかしここで申し上げたいのは、ビューテンプレートの多くの抽象化がそうであるように、相互作用をほとんど必要としない個々の関数を提示する方法についてはPHPが正しかったということです。そして、単一の名前空間とメソッドの大鍋は、その目的のための合理的な選択であるだけでなく、優れた選択でもあります。</p>
           <p>だからといって、ビューを構築する際に、よりオブジェクト指向的なものに手を伸ばしたくなることもないわけではありません。プレゼンターのコンセプトは、相互に依存している多くのメソッドとその下にあるデータをラップすることで、依存関係によって酸っぱくなってしまったメソッドのスープの完璧な解毒剤になることがあります。しかし、プレセンターがうまく適合することはめったになく、一般的ではないことが示されています。</p>
           <p>一方、MVCという3層のケーキに含まれるモデルについては、オブジェクト指向の素晴らしさを発揮する重要な砦として扱うのが一般的です。オブジェクトにふさわしい名前を見つけ、凝集度を高め、癒着を削ぎ落とすことがドメインモデリングの醍醐味です。モデルはビューとは全く違うレイヤーなので、私たちは別のアプローチをとっています。</p>
@@ -278,10 +278,10 @@ if person.in? people
       <div class="text__body">
         <div class="text__content common-content">
           <h3>大きな傘を広げる</h3>
-          <p>多くの物議を醸すアイデアを持つRailsは、すべての人に常にすべての信条を完全に尊重することを求めれば、すぐに偏った思想の隠者による孤立した集団になる可能性があります。だから私たちはそうしません!</p>
+          <p>多くの物議を醸すアイデアを持つRailsは、すべての人に常にすべての信条を完全に尊重することを求めれば、すぐに偏った思想の隠者による孤立した集団になる可能性があります。だから私たちはそうしません！</p>
           <p>私たちには意見の相違が必要です。方言が必要です。思想や人物の多様性が必要です。このアイデアのるつぼの中にこそ最高の共有物があるのです。多くの人々が、コードや考察に基づく議論を通じて、協力しています。</p>
           <p>このように、このドクトリンでは理想化された形を説明していますが、日常の現実はもっと繊細な（そして興味深い）ものです。Railsがこのような大規模なコミュニティを一つの傘のもとで支えることができるのは、リトマス試験がない（あったとしてもほとんどない）からです。</p>
-          <p>私がしばしば重大な不満を表明してきたテスト用DSLであるRSpecの継続的な成功は、完璧な証拠です。私はなぜこれではいけないと思うのか、顔を真っ赤にしてわめき散らすことができますが、にも関わらずRSpecは依然として花を咲かせ、繁栄することができます。その点の方が遥かに重要なのです!</p>
+          <p>私がしばしば重大な不満を表明してきたテスト用DSLであるRSpecの継続的な成功は、完璧な証拠です。私はなぜこれではいけないと思うのか、顔を真っ赤にしてわめき散らすことができますが、にも関わらずRSpecは依然として花を咲かせ、繁栄することができます。その点の方が遥かに重要なのです！</p>
           <p>APIとしてのRailsの到来についても同じことが言えます。私の個人的な焦点とこだわりは、ビューを含む統合システムにありますが、クライアントとサーバを分割したいと考えている人にも、Railsがうまくいく余地があることは間違いありません。私たちはこれを二次的なミッションとして共存できる限り受け入れるべきであり、それは確実に可能だと信じています。</p>
           <p>大きな傘を広げるということは、すべての人に万能であろうとすることではありません。すべての人を歓迎し、自分の飲み物を持ってくることを許可するということです。他の人にも参加してもらうことで、私たちの魂や価値観を失う必要はありませんし、おいしい飲み物の新しい混ぜ方も学べるかもしれません。</p>
           <p>これはタダではできません。歓迎するための努力が必要です。特に、あなたの目標が、すでにコミュニティの一部になっている人たちと同じような人たちをより多く集めることだけではないのであれば、なおさらです。参入障壁を下げることは、常に真剣に取り組むべき仕事です。</p>
