--- a/index.html
+++ b/index.html
@@ -148,6 +148,11 @@ description: "A full-stack web application framework written in Ruby, following 
           <img src="/assets/images/logo-freeagent.svg" alt="FreeAgent" />
         </a>
       </div>
+      <div class="trusted__block">
+        <a href="https://www.1password.com/" aria-label="1password">
+          <img src="/assets/images/logo-1password.svg" alt="1password" />
+        </a>
+      </div>
     </div>
   </div>
 </div>
