--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -245,6 +245,14 @@ redirect_from:
                 </a>
               </div>
               <div class="trusted__block">
+                <a href="/foundation/serpapi" aria-label="SerpApi">
+                  <img
+                    src="/assets/images/logo-serpapi.png"
+                    alt="SerpApi"
+                  />
+                </a>
+              </div>
+              <div class="trusted__block">
                 <a href="/foundation/tablecheck" aria-label="TableCheck">
                   <img
                     src="/assets/images/logo-tablecheck-black.svg"
