--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -249,6 +249,7 @@ redirect_from:
                   <img
                     src="/assets/images/logo-serpapi.png"
                     alt="SerpApi"
+                    style="padding: 9px 0"
                   />
                 </a>
               </div>
