Add SerpAPI SVG logo

--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -247,9 +247,8 @@ redirect_from:
               <div class="trusted__block">
                 <a href="/foundation/serpapi" aria-label="SerpApi">
                   <img
-                    src="/assets/images/logo-serpapi.png"
+                    src="/assets/images/logo-serpapi.svg"
                     alt="SerpApi"
-                    style="padding: 9px 0"
                   />
                 </a>
               </div>
