--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -32,18 +32,10 @@ redirect_from:
         <p>We will also be administering <a href="/trademarks">the Rails trademarks</a> through an exclusive license from the trademark owner.</p>
         <p>Here are some of our recent announcements:</p>
 
-        <ul style="padding-left: 0;">
-          {% assign sorted_posts = site.categories[page.category] | sort: 'date'
-          | reverse %} {% assign limited_posts = sorted_posts | slice: 0, 8 %}
+        <ul>
+          {% assign sorted_posts = site.categories[page.category] | sort: 'date' | reverse %} {% assign limited_posts = sorted_posts | slice: 0, 8 %}
           {% for post in limited_posts %}
-          <li style="display: flex; gap: 2rem; margin-top: 1rem;">
-            <div style="white-space: nowrap; flex-shrink: 0; width: 6rem;">
-              {{ post.date | date: '%b %-d, %Y' }}
-            </div>
-            <div>
-              <a href="{{ post.url }}">{{ post.title | strip_html }}</a>
-            </div>
-          </li>
+          <li><a href="{{ post.url }}">{{ post.title | strip_html }}</a> <span style="display: inline-block;">{{ post.date | date: '%b %-d, %Y' }}</span></li>
           {% endfor %}
         </ul>
 
@@ -193,7 +185,9 @@ redirect_from:
         <p>The foundation is always open to new Contributing members. Please apply for membership by writing to <a href="mailto:foundation@rubyonrails.org">foundation@rubyonrails.org</a> for more details. If your company has been benefiting from Rails over the years, but not sure how it might give back to the ecosystem, now there's a clear and obvious choice.</p>
 
         <div class="container" style="display: flex; justify-content: center; padding: 20px;">
-          <a href="https://public.3.basecamp.com/p/7ymKZrwbdPoZhwCzhH2SZkLH" class="common-button common-button--size-medium common-button--color-red"><span>Download the membership deck</span></a>
+          <a href="https://public.3.basecamp.com/p/7ymKZrwbdPoZhwCzhH2SZkLH" class="common-button common-button--size-medium">
+            <span>Download the membership deck</span>
+          </a>
         </div>
 
         <hr class="divider" />
@@ -203,16 +197,16 @@ redirect_from:
 
         <p>The current board members are:</p>
         <ul>
-          <li><a href="https://www.linkedin.com/in/linh-dam-48a55641/">Linh Dam</a> (Co-Founder and Chief Architect, Judge.me)</li>
-          <li><a href="https://www.linkedin.com/in/sdavis7766/">Steve Davis</a> (President of Product & Technology, Procore)</li>
-          <li><a href="https://www.linkedin.com/in/rosagutierrezescudero/">Rosa Gutiérrez</a> (Lead Programmer, 37signals)</li>
-          <li><a href="https://www.linkedin.com/in/whitneyimura/">Whitney Imura</a> (VP of Engineering, GitHub)</li>
-          <li><a href="https://www.linkedin.com/in/jason-meller-04498230/">Jason Meller</a> (VP, Product, 1Password)</li>
-          <li><a href="https://www.linkedin.com/in/brunomiranda/">Bruno Miranda</a> (SVP, Engineering, Doximity)</li>
-          <li><a href="https://www.linkedin.com/in/ryansherlock/">Ryan Sherlock</a> (Director of Engineering, Intercom)</li>
-          <li><a href="https://www.linkedin.com/in/lastgabs/">Gabi Stefanini</a> (Director of Engineering, Shopify)</li>
-          <li><a href="https://www.linkedin.com/in/valdivia-dev/">Jorge Valdivia</a> (CTO, Fleetio)</li>
-          <li><a href="https://www.linkedin.com/in/tapster/">Miles Woodroffe</a> (Technical Advisor to the CEO, Cookpad)</li>
+          <li><a href="https://www.linkedin.com/in/linh-dam-48a55641/">Linh Dam</a> Co-Founder and Chief Architect, Judge.me</li>
+          <li><a href="https://www.linkedin.com/in/sdavis7766/">Steve Davis</a> President of Product & Technology, Procore</li>
+          <li><a href="https://www.linkedin.com/in/rosagutierrezescudero/">Rosa Gutiérrez</a> Lead Programmer, 37signals</li>
+          <li><a href="https://www.linkedin.com/in/whitneyimura/">Whitney Imura</a> VP of Engineering, GitHub</li>
+          <li><a href="https://www.linkedin.com/in/jason-meller-04498230/">Jason Meller</a> VP, Product, 1Password</li>
+          <li><a href="https://www.linkedin.com/in/brunomiranda/">Bruno Miranda</a> SVP, Engineering, Doximity</li>
+          <li><a href="https://www.linkedin.com/in/ryansherlock/">Ryan Sherlock</a> Director of Engineering, Intercom</li>
+          <li><a href="https://www.linkedin.com/in/lastgabs/">Gabi Stefanini</a> Director of Engineering, Shopify</li>
+          <li><a href="https://www.linkedin.com/in/valdivia-dev/">Jorge Valdivia</a> CTO, Fleetio</li>
+          <li><a href="https://www.linkedin.com/in/tapster/">Miles Woodroffe</a> Technical Advisor to the CEO, Cookpad</li>
         </ul>
 
         <hr class="divider" />
@@ -231,6 +225,8 @@ redirect_from:
         <p>In 2022, the first eight Core foundation members banded together to generously endow the foundation with $1,000,000 USD in funding to kick start the foundation and make a real difference on all the aforementioned areas of improvement.</p>
         <p>Going forward, each Core member has committed to contributing $75,000/year, with Contributing members donating a further $25,000/year.</p>
         <p>With this combined budget dedicated to fulfilling our mission, we will not have to rely on funding from individual contributors.</p>
+
+        <hr class="divider" />
 
         <h3>Suggestions?</h3>
         <p>We are always open to hearing ideas and suggestions that align with our mission to improve the documentation, education, events, and marketing efforts around Rails.</p>
