--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ end
             </div>
 
             <div class="card__headline">
-              <h3>Read the guides.</h3>
+              <h3>Read the guides</h3>
             </div>
 
             <div class="card__content">
@@ -367,7 +367,7 @@ end
             </div>
 
             <div class="card__headline">
-              <h3>Contribute on GitHub.</h3>
+              <h3>Contribute on GitHub</h3>
             </div>
 
             <div class="card__content">
@@ -385,7 +385,7 @@ end
             </div>
 
             <div class="card__headline">
-              <h3>See what’s new.</h3>
+              <h3>See what’s new</h3>
             </div>
 
             <div class="card__content">
@@ -402,9 +402,9 @@ end
   <div class="container">
     <div class="text__body">
       <div class="text__content common-content common-content--size-large">
-        <p>Learn more about <a href="https://hotwired.dev">Hotwire</a>, the default front-end framework for Rails.</p>
+        <p><strong>Learn more</strong> about <a href="https://hotwired.dev">Hotwire</a> — the default front-end framework for Rails</p>
 
-        <p><strong>Stay up to date</strong> with Rails on <a href="https://x.com/rails" class="icon icon--x">X</a>, <a href="https://www.youtube.com/@railsofficial" class="icon icon--youtube">YouTube</a>, and <a href="https://world.hey.com/this.week.in.rails" class="icon icon--world">This Week in Rails</a>.</p>
+        <p><strong>Stay up to date</strong> with Rails on <a href="https://x.com/rails">X</a>, <a href="https://www.youtube.com/@railsofficial">YouTube</a>, and <a href="https://world.hey.com/this.week.in.rails">This Week in Rails</a></p>
       </div>
     </div>
   </div>
