--- a/_pages/docs.html
+++ b/_pages/docs.html
@@ -11,7 +11,8 @@ redirect_from:
     <div class="heading__body">
       <div class="heading__headline common-headline">
         <h1>
-          Docs: Everything you need<br> to get building.
+          Docs: Everything you need<br />
+          to get building.
         </h1>
       </div>
     </div>
@@ -171,6 +172,11 @@ redirect_from:
         </p>
 
         <ul class="case-studies">
+          <li class="case-study">
+            <a href="/docs/case-studies/cookpad">
+              <img src="/assets/images/logo-cookpad.svg" alt="Doximity" />
+            </a>
+          </li>
           <li class="case-study">
             <a href="/docs/case-studies/doximity">
               <img src="/assets/images/logo-doximity.svg" alt="Doximity" />
