Adding OpenGraph image

--- a/_case_studies/cookpad.html
+++ b/_case_studies/cookpad.html
@@ -2,7 +2,7 @@
 layout: default
 title: "Cookpad Case Study — Ruby on Rails"
 description: "Read how Rails has helped Cookpad serve 100M+ home cooks."
-og_image: assets/images/case-study-doximity.png
+og_image: assets/images/case-study-cookpad.jpg
 permalink: /docs/case-studies/cookpad
 redirect_from:
   - /docs/case-studies/cookpad/
