Image changes per Amanda

--- a/_case_studies/cookpad.html
+++ b/_case_studies/cookpad.html
@@ -159,6 +159,7 @@ redirect_from:
       <img
         src="/assets/images/case-cookpad-image2.webp"
         alt="Women cooking around a pot with a cellphone filming their cooking"
+        style="object-position: center calc(50% - 100px)"
       />
     </div>
   </div>
@@ -213,8 +214,8 @@ redirect_from:
   <div class="container">
     <div class="casestudy__floater casestudy__image">
       <img
-        src="/assets/images/case-cookpad-image3.webp"
-        alt="A mother and daughter cooking together"
+        src="/assets/images/case-cookpad-image4.webp"
+        alt="A man scrolling on a tablet in the kitchen with a cellphone overlaid showing the Cookpad application"
       />
     </div>
   </div>
@@ -262,17 +263,6 @@ redirect_from:
           day.
         </p>
       </div>
-    </div>
-  </div>
-</div>
-
-<div class="docs casestudy">
-  <div class="container">
-    <div class="casestudy__floater casestudy__image">
-      <img
-        src="/assets/images/case-cookpad-image4.webp"
-        alt="A man scrolling on a tablet in the kitchen with a cellphone overlaid showing the Cookpad application"
-      />
     </div>
   </div>
 </div>
