Update index.html with Rails World dates and prospectus button

--- a/world/index.html
+++ b/world/index.html
@@ -27,12 +27,16 @@ permalink:
 
         <h2>Next up.</h2>
 
-        <p><b>Rails World 2026</b> will take place in Austin, TX in September 2026. Keep an eye on the website or <a href="https://rails-foundation.kit.com/sign-up">sign up to the event mailing list</a> for updates.</p>
+        <p><b>Rails World 2026</b> will take place in <b></b>Austin, TX</b> September 23 & 24, 2026. Keep an eye on the website or <a href="https://rails-foundation.kit.com/sign-up">sign up to the event mailing list</a> for updates.</p>
 
-        <h2>Sponsor Rails World.</h2>
+        <h2>Become a Sponsor.</h2>
 
-        <p>Interested in becoming a sponsor? We are always looking for companies who want to help us build fun, engaging elements of Rails World. Please reach out to <a href="mailto:sponsors@rubyonrails.org">sponsors@rubyonrails.org</a> to receive the 2026 prospectus when it is ready.</p>
+        <p>Interested in becoming a Rails World sponsor? We are always looking for companies who want to help us build fun, engaging elements of Rails World. Please reach out to <a href="mailto:sponsors@rubyonrails.org">sponsors@rubyonrails.org</a> or download the sponsorship prospectus below.</p>
 
+        <div class="container" style="display: flex; justify-content: center; padding: 20px">
+          <a href="https://public.3.basecamp.com/p/gr3BsVx9mBmfJzN36rjaprRs" class="common-button common-button--size-medium common-button--color-red" style="color: #FFF"><span>Sponsor Rails World</span></a>
+        </div>
+        
         <hr class="divider" />
 
         <h2>Previous editions.</h2>
