--- a/world/index.html
+++ b/world/index.html
@@ -27,7 +27,7 @@ permalink:
 
         <h2>Next up.</h2>
 
-        <p><b>Rails World 2026</b> will take place in <b></b>Austin, TX</b> September 23 & 24, 2026. Keep an eye on the website or <a href="https://rails-foundation.kit.com/sign-up">sign up to the event mailing list</a> for updates.</p>
+        <p><b>Rails World 2026</b> will take place in <b>Austin, TX</b> September 23 & 24, 2026. Keep an eye on the website (coming soon!) or <a href="https://rails-foundation.kit.com/sign-up">sign up to the event mailing list</a> for updates.</p>
 
         <h2>Become a Sponsor.</h2>
 
