Add PlanetScale to the Good Company

--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@ description: "A full-stack web application framework written in Ruby, following 
           <img src="/assets/images/logo-1password.svg" alt="1password" />
         </a>
       </div>
+      <div class="trusted__block">
+        <a href="https://www.planetscale.com/" aria-label="PlanetScale">
+          <img src="/assets/images/logo-planetscale.svg" alt="PlanetScale" />
+        </a>
+      </div>
     </div>
   </div>
 </div>
