--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ end
       <div class="text__content common-content common-content--size-large">
         <p><strong>Learn more</strong> about <a href="https://hotwired.dev">Hotwire</a> — the default front-end framework for Rails</p>
 
-        <p><strong>Stay up to date</strong> with Rails on <a href="https://x.com/rails">X</a>, <a href="https://www.youtube.com/@railsofficial">YouTube</a>, and <a href="https://world.hey.com/this.week.in.rails">This Week in Rails</a></p>
+        <p><strong>Stay up to date</strong> with Rails on <a href="https://x.com/rails">X</a>, <a href="https://www.youtube.com/@railsofficial">YouTube</a>, <a href="https://world.hey.com/this.week.in.rails">This Week in Rails</a>, or the <a href="https://podcast.rubyonrails.org/">On Rails podcast</a>.</p>
       </div>
     </div>
   </div>
