Looks weird with that in front

--- a/_pages/docs.html
+++ b/_pages/docs.html
@@ -11,7 +11,7 @@ redirect_from:
     <div class="heading__body">
       <div class="heading__headline common-headline">
         <h1>
-          Docs: Everything you need<br />
+          Everything you need<br />
           to get building.
         </h1>
       </div>
