Event home page, moving world home page

--- a/world/index.html
+++ b/world/index.html
@@ -1,5 +1,5 @@
 ---
-id: events
+id: world
 title: "Rails World Conference"
 description: Rails World is an annual two day Rails community conference, featuring technical talks, workshops, and keynotes about best practices in Rails development.
 permalink:
@@ -21,37 +21,83 @@ permalink:
     <div class="text__body">
       <div class="text__content common-content">
         <h2>What is Rails World?</h2>
-        <p>Rails World is an annual two-day, two track community conference featuring technical talks, demos, workshops, networking, and keynotes about the latest features and best practices in Rails development.</p>
+        <p>
+          Rails World is an annual two-day, two track community conference
+          featuring technical talks, demos, workshops, networking, and keynotes
+          about the latest features and best practices in Rails development.
+        </p>
 
         <hr class="divider" />
 
         <h2>Next up.</h2>
 
-        <p><b>Rails World 2026</b> will take place in <b>Austin, TX</b> September 23 & 24, 2026. Keep an eye on the website (coming soon!) or <a href="https://rails-foundation.kit.com/sign-up">sign up to the event mailing list</a> for updates.</p>
+        <p>
+          <b>Rails World 2026</b> will take place in <b>Austin, TX</b> September
+          23 & 24, 2026. Keep an eye on the website (coming soon!) or
+          <a href="https://rails-foundation.kit.com/sign-up"
+            >sign up to the event mailing list</a
+          >
+          for updates.
+        </p>
 
         <h2>Become a Sponsor.</h2>
 
-        <p>Interested in becoming a Rails World sponsor? We are always looking for companies who want to help us build fun, engaging elements of Rails World. Please reach out to <a href="mailto:sponsors@rubyonrails.org">sponsors@rubyonrails.org</a> or download the sponsorship prospectus below.</p>
+        <p>
+          Interested in becoming a Rails World sponsor? We are always looking
+          for companies who want to help us build fun, engaging elements of
+          Rails World. Please reach out to
+          <a href="mailto:sponsors@rubyonrails.org">sponsors@rubyonrails.org</a>
+          or download the sponsorship prospectus below.
+        </p>
 
-        <div class="container" style="display: flex; justify-content: center; padding: 20px">
-          <a href="https://public.3.basecamp.com/p/gr3BsVx9mBmfJzN36rjaprRs" class="common-button common-button--size-medium common-button--color-red" style="color: #FFF"><span>Sponsor Rails World</span></a>
+        <div
+          class="container"
+          style="display: flex; justify-content: center; padding: 20px"
+        >
+          <a
+            href="https://public.3.basecamp.com/p/gr3BsVx9mBmfJzN36rjaprRs"
+            class="common-button common-button--size-medium common-button--color-red"
+            style="color: #fff"
+            ><span>Sponsor Rails World</span></a
+          >
         </div>
-        
+
         <hr class="divider" />
 
         <h2>Previous editions.</h2>
 
         <ul>
-            <li><a href="/world/2025">2025</a> Amsterdam, NL (<a href="https://www.youtube.com/playlist?list=PLHFP2OPUpCebhAv1ZWb_978cTl1o-yue-">2025 Playlist</a>)</li>
-            <li><a href="/world/2024">2024</a> Toronto, CA (<a href="https://www.youtube.com/playlist?list=PLHFP2OPUpCeb182aDN5cKZTuyjn3Tdbqx">2024 Playlist</a>)</li>
-            <li><a href="/world/2023">2023</a> Amsterdam, NL (<a href="https://www.youtube.com/playlist?list=PLHFP2OPUpCeY9IX3Ht727dwu5ZJ2BBbZP">2023 Playlist</a>)</li>
+          <li>
+            <a href="/world/2025">2025</a> Amsterdam, NL (<a
+              href="https://www.youtube.com/playlist?list=PLHFP2OPUpCebhAv1ZWb_978cTl1o-yue-"
+              >2025 Playlist</a
+            >)
+          </li>
+          <li>
+            <a href="/world/2024">2024</a> Toronto, CA (<a
+              href="https://www.youtube.com/playlist?list=PLHFP2OPUpCeb182aDN5cKZTuyjn3Tdbqx"
+              >2024 Playlist</a
+            >)
+          </li>
+          <li>
+            <a href="/world/2023">2023</a> Amsterdam, NL (<a
+              href="https://www.youtube.com/playlist?list=PLHFP2OPUpCeY9IX3Ht727dwu5ZJ2BBbZP"
+              >2023 Playlist</a
+            >)
+          </li>
         </ul>
 
         <hr class="divider" />
 
         <h2>Suggestions?</h2>
-        <p>Where would you like to see a future edition of Rails World? Drop your suggestion in <a href="https://app.todohelpers.com/forms/4758b5b0-d6f9-4f41-8041-992cc9b748fb">this suggestion form</a>.</p>
-
+        <p>
+          Where would you like to see a future edition of Rails World? Drop your
+          suggestion in
+          <a
+            href="https://app.todohelpers.com/forms/4758b5b0-d6f9-4f41-8041-992cc9b748fb"
+            >this suggestion form</a
+          >.
+        </p>
       </div>
     </div>
   </div>
