--- a/_pages/events.html
+++ b/_pages/events.html
@@ -101,7 +101,7 @@ redirect_from:
       </div>
 
       <div class="card">
-        <a href="https://www.kaigionrails.org/2026" title="Kaigi on Rails">
+        <a href="https://kaigionrails.org/2026/" title="Kaigi on Rails">
           <div class="card__body">
             <div class="card__label">
               <h6>Tokyo, Japan</h6>
