--- a/_pages/events.html
+++ b/_pages/events.html
@@ -58,16 +58,18 @@ redirect_from:
   <div class="container">
     <h2>Community Events</h2>
     <div class="cards__container">
-      {% for event in site.data.events.community_events %} {% assign start_month
-      = event.start_date | date: "%B" %} {% assign end_month = event.end_date |
-      date: "%B" %} {% assign start_day = event.start_date | date: "%-d" %} {%
-      assign end_day = event.end_date | date: "%-d" %} {% assign year =
-      event.start_date | date: "%Y" %} {% if start_month == end_month %} {%
-      assign presentation_date = start_month | append: " " | append: start_day |
-      append: "–" | append: end_day | append: ", " | append: year %} {% else %}
-      {% assign presentation_date = start_month | append: " " | append:
-      start_day | append: "–" | append: end_month | append: " " | append:
-      end_day | append: ", " | append: year %} {% endif %}
+      {% assign now = site.time | date: "%Y%m%d" %} {% for event in
+      site.data.events.community_events %} {% assign event_end = event.end_date
+      | date: "%Y%m%d" %} {% if event_end < now %}{% continue %}{% endif %} {%
+      assign start_month = event.start_date | date: "%B" %} {% assign end_month
+      = event.end_date | date: "%B" %} {% assign start_day = event.start_date |
+      date: "%-d" %} {% assign end_day = event.end_date | date: "%-d" %} {%
+      assign year = event.start_date | date: "%Y" %} {% if start_month ==
+      end_month %} {% assign presentation_date = start_month | append: " " |
+      append: start_day | append: "–" | append: end_day | append: ", " | append:
+      year %} {% else %} {% assign presentation_date = start_month | append: " "
+      | append: start_day | append: "–" | append: end_month | append: " " |
+      append: end_day | append: ", " | append: year %} {% endif %}
       <div class="card">
         <a href="{{ event.url }}" title="{{ event.name }}">
           <div class="card__body">
