Update foundation.html with interim director

--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -114,11 +114,6 @@ redirect_from:
                 </a>
               </div>
               <div class="trusted__block">
-                <a href="/foundation/bigbinary" aria-label="BigBinary">
-                  <img src="/assets/images/logo-bigbinary.svg" alt="BigBinary" />
-                </a>
-              </div>
-              <div class="trusted__block">
                 <a href="/foundation/cedarcode" aria-label="Cedarcode">
                   <img src="/assets/images/logo-cedarcode.svg" alt="Cedarcode" />
                 </a>
@@ -199,12 +194,12 @@ redirect_from:
         <ul>
           <li><a href="https://www.linkedin.com/in/linh-dam-48a55641/">Linh Dam</a> Co-Founder and Chief Architect, Judge.me</li>
           <li><a href="https://www.linkedin.com/in/sdavis7766/">Steve Davis</a> President of Product & Technology, Procore</li>
+          <li><a href="https://www.linkedin.com/in/rafaelmfranca/">[Interim] Rafael França</a> Principal Engineer, Shopify</li>
           <li><a href="https://www.linkedin.com/in/rosagutierrezescudero/">Rosa Gutiérrez</a> Lead Programmer, 37signals</li>
           <li><a href="https://www.linkedin.com/in/whitneyimura/">Whitney Imura</a> VP of Engineering, GitHub</li>
           <li><a href="https://www.linkedin.com/in/jason-meller-04498230/">Jason Meller</a> VP, Product, 1Password</li>
           <li><a href="https://www.linkedin.com/in/brunomiranda/">Bruno Miranda</a> SVP, Engineering, Doximity</li>
           <li><a href="https://www.linkedin.com/in/ryansherlock/">Ryan Sherlock</a> Director of Engineering, Intercom</li>
-          <li><a href="https://www.linkedin.com/in/lastgabs/">Gabi Stefanini</a> Director of Engineering, Shopify</li>
           <li><a href="https://www.linkedin.com/in/valdivia-dev/">Jorge Valdivia</a> CTO, Fleetio</li>
           <li><a href="https://www.linkedin.com/in/tapster/">Miles Woodroffe</a> Technical Advisor to the CEO, Cookpad</li>
         </ul>
