--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -85,7 +85,7 @@ redirect_from:
                 </a>
               </div>
               <div class="trusted__block">
-                <a href="https://shopify.com" aria-label="Shopify">
+                <a href="/foundation/shopify" aria-label="Shopify">
                   <img src="/assets/images/logo-shopify.svg" alt="Shopify" />
                 </a>
               </div>
